--- a/src/modules/core/styles/base.scss
+++ b/src/modules/core/styles/base.scss
@@ -7,12 +7,11 @@
 
 /* customize bootstrap stuff in /bootstrap/scss/_custom.scss */
 
-body {
-	background:$colorBeige;
+* {
+	-webkit-font-smoothing: antialiased;
+	-webkit-text-size-adjust: 100%;
 }
 
-.text-hero {
-	font-size: 4.5rem;
-	line-height: 5rem;
-	font-weight: 700;
+.no-padding {
+	padding:0px;
 }
