--- a/src/modules/login/styles/login.scss
+++ b/src/modules/login/styles/login.scss
@@ -2,6 +2,9 @@
 
 .route-login {
 	background:$colorBeige;
+	position: absolute;
+	width: 100%;
+	height: 100%;
 
 	h3 {
 		color: $colorHPIRed;
@@ -16,6 +19,11 @@
 		float:right;
 	}
 
+	.form-group {
+		z-index:10;
+		position: relative;
+	}
+
 	select, input {
 		margin-bottom:10px;
 		border: 1px solid rgba(0, 0, 0, 0.15);
@@ -25,7 +33,7 @@
 		position:absolute;
 		background:no-repeat center center;
 		background-size:contain;
-		z-index:-1;
+		z-index:0;
 		width:300px;
 		height:300px;
 
