--- a/src/modules/content/styles/search.scss
+++ b/src/modules/content/styles/search.scss
@@ -9,6 +9,7 @@
 
 	h5 {
 		color: $colorHPIRed;
+		margin:0px 0px 30px 0px;
 	}
 
 	.search-bar {
@@ -20,8 +21,41 @@
 		height:auto;
 	}
 
-	.search-results > .row > div > div:nth-child(3n +1) {
+	select {
+		line-height: 1;
+	}
+
+	.results > div:nth-child(3n +1) {
 		clear:both;
 	}
 
+	.result {
+		border-top:2px solid #696969;
+		padding:30px 0px;
+
+		.result-title {
+			display:block;
+			margin-bottom:20px;
+
+			h6 {
+				color: $colorHPIRed;
+				font-size:20px;
+			}
+
+			.result-source {
+				display:block;
+			}
+		}
+	}
+
+	.search-results {
+		margin-top:30px;
+	}
+
+
+	.filters {
+		.filters-attributes {
+			background:#e9e9e9;
+		}
+	}
 }
