added border-bottom to title, finished timetable

--- a/src/modules/timetable/styles/controls.scss
+++ b/src/modules/timetable/styles/controls.scss
@@ -3,8 +3,7 @@
 .section-timetable {
 	width:100%;
 	float:left;
-	border-top:2px solid #696969;
-	padding: 15px 0px 50px;
+	padding-top: 15px;
 	line-height: 1.75rem;
 
 h5 {
