minor gipfel changes

--- a/src/modules/static/styles/footer.scss
+++ b/src/modules/static/styles/footer.scss
@@ -2,3 +2,13 @@ footer {
 	width:100%;
 	float:left;
 }
+
+.imprint {
+	text-align: right;
+	bottom: 0;
+	width: 100%;
+
+	a{
+		padding: 5%;
+	}
+}
