finished Mein Profil

--- a/src/modules/core/styles/base.scss
+++ b/src/modules/core/styles/base.scss
@@ -4,6 +4,7 @@
 
 @import "bootstrap/scss/bootstrap";
 @import "fontawesome/font-awesome";
+@import "react-toggle-switch/switch.scss";
 
 /* customize bootstrap stuff in /bootstrap/scss/_custom.scss */
 
