--- a/src/modules/settings/styles/privacy.scss
+++ b/src/modules/settings/styles/privacy.scss
@@ -8,11 +8,12 @@
 
   h5 {
     color: $colorHPIRed;
+    padding-bottom: 20px;
   }
 
   table {
     width: 100%;
-    margin-top: 20px;
+    margin-top: 40px;
     border-collapse: separate;
     border-spacing: 0px 2px;
 
