--- a/src/modules/content/styles/search.scss
+++ b/src/modules/content/styles/search.scss
@@ -57,4 +57,24 @@
 			background:#e9e9e9;
 		}
 	}
+
+	.form-check {
+		padding-left: 10px;
+	}
+
+	.form-check-label {
+		span {
+			padding-left: 10px;
+		}
+	}
+
+	.form-check-input {
+		position: relative;
+		top: 1px;
+	}
+
+	.btn {
+		background: #e9e9e9;
+		border-width: 0px;
+	}
 }
