--- a/src/modules/fileExplorer/styles/directories.scss
+++ b/src/modules/fileExplorer/styles/directories.scss
@@ -1,6 +1,7 @@
 @import '../../core/styles/colors.scss';
 
 .directories {
+  border-bottom:2px solid #696969;
   .card {
     margin-right: 10px;
   }
