--- a/src/modules/backend/styles/layout.scss
+++ b/src/modules/backend/styles/layout.scss
@@ -1,8 +1,14 @@
 @import '../../core/styles/colors';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .content-wrapper {
 	width:100%;
 	float: left;
 	padding-left:90px;
 	padding-right: 20px;
+
+	@include media-breakpoint-down(xs) {
+		padding-left:0px;
+		padding-right:0px;
+	}
 }
