--- a/src/modules/backend/styles/sidebar.scss
+++ b/src/modules/backend/styles/sidebar.scss
@@ -1,5 +1,5 @@
 @import '../../core/styles/colors';
-
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 aside.nav-sidebar {
 	color:#727272;
@@ -11,12 +11,13 @@ aside.nav-sidebar {
 	margin-top: 0;
 	margin-bottom: 0;
 	background-color: #c3c1c1;
-	overflow-y: auto;
 	z-index: 100;
+	float: left;
 
 	nav {
 		width:100%;
 		float:left;
+		overflow-y: auto;
 
 		ul {
 			width:100%;
@@ -56,6 +57,60 @@ aside.nav-sidebar {
 
 					span {
 						display: none;
+					}
+				}
+			}
+		}
+	}
+
+	.mobile-nav-toggle {
+		display:none;
+		bottom:-55px;
+		height:55px;
+		width:50px;
+		position: absolute;
+		left:0px;
+		padding-top:5px;
+		font-size:22px;
+		line-height:50px;
+		text-align:center;
+	}
+
+	@include media-breakpoint-down(xs) {
+		width:100%;
+		position: relative;
+
+		.mobile-nav-toggle {
+			display:block;
+		}
+
+		nav {
+			overflow:hidden;
+			max-height:0px;
+			transition: all 0.4s;
+
+			&.active {
+				max-height:800px;
+			}
+
+			ul {
+
+				li {
+
+					a {
+						padding:0px 20px;
+
+						i.fa {
+							width: auto !important;
+							float: left;
+							margin-right: 20px;
+							line-height:60px;
+						}
+
+						.link-name {
+							display: block;
+							font-weight:700;
+						}
 					}
 				}
 			}
