--- a/src/modules/active-students/styles/list.scss
+++ b/src/modules/active-students/styles/list.scss
@@ -1,26 +1,45 @@
 
 @import '../../core/styles/colors.scss';
 
-.files {
+.Anwesenheit{
 	width:100%;
 	float:left;
-	margin-bottom:40px;
+	padding: 15px 0px 50px;
+	line-height: 1.75rem;
+
+	.picture {
+		border-radius: 50%;
+		height: 32px;
+		width: 32px;
+		margin-right: 10px;
+	}
+
+	.class-toggle {
+		border:none;
+		padding-left:10px;
+		padding-right:10px;
+	}
 
 	h5 {
 		color: $colorHPIRed;
-		padding:10px 0px 20px;
+		padding-bottom: 20px;
 	}
 
-	.card.file {
-		box-shadow: 0px 1px 2px rgba(0,0,0,0.1);
-		height:65px;
-		line-height:63px;
+	table {
+		width: 100%;
+		margin-top: 40px;
+		border-collapse: separate;
+		border-spacing: 0px 2px;
 
+		th {
+			padding-left: 15px;
+		}
 
-
-		.fa {
-			margin-right:15px;
-			color:#ccc;
+		td {
+			padding-top: 10px;
+			padding-left: 15px;
+			color: grey;
+			background-color: whitesmoke;
 		}
 	}
 }
