create  new-tool page

--- a/src/modules/tools/styles/toolCard.scss
+++ b/src/modules/tools/styles/toolCard.scss
@@ -1,6 +1,7 @@
 @import '../../core/styles/colors.scss';
 
 .tool-card {
+	cursor: pointer;
 	margin-top: 15px;
 	.card-img-top {
 		max-width:100%;
