--- a/src/modules/static/styles/footer.scss
+++ b/src/modules/static/styles/footer.scss
@@ -1,10 +1,10 @@
 footer {
 	width:100%;
-	border-top:2px solid #727272;
+	/*border-top:2px solid #727272;*/
 
 	position: inherit;
 	padding-top: 5px;
-	height: 80px;
+	height: 50px;
 	bottom: 0;
 	right: 0;
 	left: 0;
@@ -19,7 +19,9 @@ footer {
 		position: relative;
 
 		.right{
-			float: right;
+			position: relative;
+			bottom: 12px;
+
 		}
 
 		.bg-graphic {
@@ -27,11 +29,11 @@ footer {
 			background: no-repeat center center;
 			background-size: contain;
 			z-index: -1;
-			width: 125px;
-			height: 109px;
+			width: 115px;
+			height: 105px;
 
 			&.bg-graphic-footer {
-				top: -36px;
+				top: -60px;
 				right: 0;
 				background-image: url(../../../static/images/sidecloud.png);
 			}
