--- a/src/modules/backend/styles/title.scss
+++ b/src/modules/backend/styles/title.scss
@@ -3,7 +3,7 @@
 .section-title {
 	width:100%;
 	float:left;
-	border-bottom:2px solid #696969;
+	border-bottom:1px solid #ddd;
 	padding: 10px 0px 20px;
 	line-height: 1.75rem;
 
