--- a/src/modules/backend/styles/layout.scss
+++ b/src/modules/backend/styles/layout.scss
@@ -19,7 +19,7 @@
 		line-height: 1.75rem;
 
 		& + .section-default {
-			border-top:2px solid #696969;
+			border-top:1px solid #ddd;
 		}
 
 		h5 {
