Add additional CSS to fix tab appearance
The active class was set on the tab, not on the link inside it like required by Bootstrap

--- a/src/modules/administration/styles/administration.scss
+++ b/src/modules/administration/styles/administration.scss
@@ -2,3 +2,9 @@
 
 .route-administration {
 }
+
+.active > .nav-link {
+	color: #55595c;
+	background-color: #fff;
+	border-color: #ddd #ddd transparent
+}
