Some styling stuff

--- a/src/modules/base/styles/sidebar.scss
+++ b/src/modules/base/styles/sidebar.scss
@@ -39,8 +39,8 @@ aside.nav-sidebar {
 					cursor: pointer;
 
 					&.active {
-						background: $colorHPIOrange;
-						color:#fff;
+						background: #fff;
+						color: #555;
 						border-bottom:1px solid transparent;
 					}
 
