Refactor login to use Formy

--- a/src/modules/login/styles/login.scss
+++ b/src/modules/login/styles/login.scss
@@ -20,9 +20,8 @@
 		position: relative;
 	}
 
-	select, input {
+	.select, .Select, select, input {
 		margin-bottom:10px;
-		border: 1px solid rgba(0, 0, 0, 0.15);
 	}
 
 	.bg-graphic {
