--- a/src/modules/file-explorer/styles/files.scss
+++ b/src/modules/file-explorer/styles/files.scss
@@ -10,6 +10,12 @@
 		padding: 10px 0px 20px;
 	}
 
+	.modal-body {
+		button {
+			margin-left: 5px;
+		}
+	}
+
 	.card.file {
 		&:hover {
 			box-shadow: 0px 1px 4px rgba(0,0,0,0.2);
