--- a/src/modules/file-explorer/styles/upload.scss
+++ b/src/modules/file-explorer/styles/upload.scss
@@ -1,43 +1,49 @@
 @import '../../core/styles/colors.scss';
 
 .section-upload {
-	width:100%;
-	float:left;
-	padding:40px 0px;
+	width: 100%;
+	float: left;
+	padding: 40px 0px;
 	cursor: pointer;
 
 	.drop-zone {
 		width: 100%;
-		height:200px;
-		border:4px dashed #ddd;
-		background:#f9f9f9;
-		float:left;
-		font-size:30px;
-		text-align:center;
-		color:#ccc;
-		line-height:192px;
+		height: 200px;
+		border: 4px dashed #ddd;
+		background: #f9f9f9;
+		float: left;
+		font-size: 30px;
+		text-align: center;
+		color: #ccc;
+		line-height: 192px;
 	}
 	.progress {
-		margin-top: 0px;
+		margin-top: 10px;
 		margin-bottom: -4px;
 		width: 100%;
-		color:#ccc;
-		float:left;
+		background-color: #f5f5f5;
+		float: left;
 		height: 30px;
-		border:4px solid #ddd;
+		border-radius: 5px;
+		-webkit-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
+		box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);;
 
 		.percent {
 			position: absolute;
-			left: 50%;
-			color: #373a3c;
+			left: 95%;
+			padding-top: 2px;
+			color: grey;
 		}
 		.bar {
+			border-radius: 5px;
 			background-color: $colorHPIOrange;
+			height: 100%;
 		}
-		.name{
-			padding-left: 2px;
+		.name {
+			padding-left: 10px;
+			padding-top: 2px;
 			position: absolute;
-			color: #373a3c;
+			color: whitesmoke;
 		}
 	}
 }
