--- a/src/modules/file-explorer/styles/navigation.scss
+++ b/src/modules/file-explorer/styles/navigation.scss
@@ -2,14 +2,25 @@
 
 .navigation {
 	padding: 40px 0px;
-	margin-right: 10px;
+	margin-top: 40px;
 	background: #fff;
 	border-radius: 2px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-	li {
-		:hover {
-			cursor: pointer;
+	ul {
+		list-style-type: none;
+		padding-left: 0;
+		.active {
+			color: $colorHPIOrange;
+		}
+		li {
+			padding-bottom: 10px;
+			:hover {
+				cursor: pointer;
+			}
+			span {
+				margin-left: 5px;
+			}
 		}
 	}
 }
