--- a/src/modules/base/styles/layout.scss
+++ b/src/modules/base/styles/layout.scss
@@ -11,7 +11,9 @@
 		padding-left:0px;
 		padding-right:0px;
 	}
-
+	@include media-breakpoint-up(lg) {
+		padding-left:210px;
+	}
 	.section-default {
 		width:100%;
 		float:left;
