--- a/src/modules/login/styles/login.scss
+++ b/src/modules/login/styles/login.scss
@@ -1,4 +1,5 @@
 @import '../../core/styles/colors.scss';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .route-login {
 	background:$colorBeige;
@@ -23,7 +24,17 @@
 	.select, .Select, select, input {
 		margin-bottom:10px;
 	}
-
+	@include media-breakpoint-down(sm) {
+		.navbar-nav .nav-item{
+			margin-left:0;
+			margin-right:1rem;
+			float:right;
+		}
+		h3{
+			margin: 100px 0 50px;
+		}
+	}
+	
 	.bg-graphic {
 		position:absolute;
 		background:no-repeat center center;
@@ -43,6 +54,26 @@
 			top:30%;
 			background-image:url(../../../static/images/login-right.png);
 		}
+		@include media-breakpoint-down(md) {
+			&.bg-graphic-left{
+				left: 0;
+			}
+			&.bg-graphic-right{
+				right: 0;
+			}
+		}
+		@include media-breakpoint-down(sm) {
+			&.bg-graphic-right{
+				display:none;
+			}
+			&.bg-graphic-left{
+				top: 75px;
+				left: 25px;
+				width:150px;
+				height:150px;
+			}
+		}
+		
 	}
 
 }
