--- a/src/modules/courses/styles/course.scss
+++ b/src/modules/courses/styles/course.scss
@@ -1,8 +1,9 @@
 @import '../../core/styles/colors.scss';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .route-course {
 	.course-section {
-		margin: 10px;
+		margin: 10px 0;
 		width: 100%;
 		float: left;
 		padding-bottom: 20px;
@@ -42,6 +43,11 @@
 			height: 32px;
 			width: 32px;
 			margin-right: 10px;
+		}
+	}
+	@include media-breakpoint-down(xs) {
+		.container-fluid{
+			padding:0;
 		}
 	}
 }
