Make "Anwesenheit" table fit the page 2
fixed table background color on mobile use

--- a/src/modules/active-students/styles/list.scss
+++ b/src/modules/active-students/styles/list.scss
@@ -49,6 +49,7 @@
 			}
 			td{
 				padding-left: .25em;	
+				background-color: transparent;
 			}
 			.picturewrap, .firstname, .lastname{
 				display: inline-block;
