Make calendar view fill more of the screen
Ich bin mir nicht sicher, ob der Code hier an der richtigen Stelle ist,
habe die CSS mit ".fc-view > table{}" jedoch nicht finden können -->
Muss eventuell noch verschoben werden.

--- a/src/modules/timetable/styles/calendar.scss
+++ b/src/modules/timetable/styles/calendar.scss
@@ -1,4 +1,5 @@
 @import '../../core/styles/colors.scss';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .route-calendar {
 	#calendar {
@@ -51,6 +52,11 @@
 						font-weight: 600;
 					}
 				}
+			}
+		}
+		@include media-breakpoint-down(xs) {
+			.fc-month-view .fc-scroller{
+				min-height: 24em;
 			}
 		}
 	}
