--- a/src/modules/base/styles/title.scss
+++ b/src/modules/base/styles/title.scss
@@ -1,4 +1,5 @@
 @import '../../core/styles/colors.scss';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .section-title {
 	width:100%;
@@ -21,12 +22,32 @@
 			color: $colorHPIYellow;
 		}
 	}
-
 	.search-wrapper {
 		float:right;
 
 		.btn {
 			float: right;
+		}
+		
+		.mobile-search-toggle{
+			display:none;
+			float:right;
+			font-size: 1.2rem;
+		}
+		@include media-breakpoint-down(xs) {
+			float:none;
+			
+			.mobile-search-toggle{
+				display:block;
+			}
+			.input-group{
+				display:none;
+			}
+			.input-group.active{
+				display:table;
+				float:right;
+				margin-top: 15px;
+			}
 		}
 	}
 
