--- a/src/modules/content/styles/search.scss
+++ b/src/modules/content/styles/search.scss
@@ -1,4 +1,5 @@
 @import '../../core/styles/colors.scss';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .section-search {
 	width:100%;
@@ -51,7 +52,7 @@
 		margin-top:30px;
 	}
 
-
+	
 	.filters {
 		.filters-attributes {
 			background:#e9e9e9;
@@ -62,20 +63,55 @@
 			}
 		}
 	}
-
-	.form-check {
-		padding-left: 10px;
+	.mobile-filter-toggle{
+		display:none;
+		padding: 15px 0 0;
+		margin: 0 -15px;
+		text-align: right;
 	}
-
-	.form-check-label {
-		span {
-			padding-left: 10px;
+	@include media-breakpoint-down(xs) {
+		.search-bar{
+			margin-bottom: 0;
+		}
+		.filters{
+			display:none;
+		}
+		.filters.active{
+			display:block;
+			padding-bottom: 15px;
+			border-bottom: 1px dashed #ddd;
+		}
+		.mobile-filter-toggle{
+			display:block;
+		}
+		.btn-group .dropdown-toggle{
+			padding: 5px 8px;
+			width:100%;
+		}
+		.btn-group .dropdown-menu-right{
+			left:0;
+			right:auto;
+		}
+		.filters-type .btn{
+			margin: 5px 0;
+			padding: 8px 15px ;
+		}
+		.search-results{
+			margin-top: 15px;
+		}
+		.search-results h5{
+			margin-bottom: 15px;
 		}
 	}
 
+	.form-check {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
 	.form-check-input {
 		position: relative;
 		top: 1px;
+		margin-right: 5px;
 	}
 
 
