Use react-select for all filter fields, change styling

--- a/src/modules/content/styles/search.scss
+++ b/src/modules/content/styles/search.scss
@@ -62,6 +62,9 @@
 				border-width: 0px;
 			}
 		}
+		.Select {
+			padding: 0.5rem 0 !important;
+		}
 	}
 	.mobile-filter-toggle{
 		display:none;
@@ -113,6 +116,4 @@
 		top: 1px;
 		margin-right: 5px;
 	}
-
-
 }
