--- a/src/modules/administration/styles/administration.scss
+++ b/src/modules/administration/styles/administration.scss
@@ -1,10 +1,19 @@
 @import '../../core/styles/colors.scss';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .route-administration {
-}
+	 .nav-item.active{
+		color: #55595c;
+		background-color: #fff;
+		border-bottom: 1px solid $colorHPIRed
+	}
 
-.active > .nav-link {
-	color: #55595c;
-	background-color: #fff;
-	border-color: #ddd #ddd transparent
+	@include media-breakpoint-down(xs) {
+		.nav-tabs .nav-item + .nav-item{
+			margin-left: 0;
+		}
+		.nav-item > a{
+			padding: 8px;
+		}
+	}
 }
