--- a/src/modules/settings/styles/notifications.scss
+++ b/src/modules/settings/styles/notifications.scss
@@ -1,21 +1,56 @@
 @import '../../core/styles/colors.scss';
+@import '../../core/styles/bootstrap/scss/bootstrap';
 
 .section-notifications {
-  width:100%;
-  float:left;
-  padding: 15px 0px 50px;
-  line-height: 1.75rem;
+	width:100%;
+	float:left;
+	padding: 15px 0px 50px;
+	line-height: 1.75rem;
 
-  h5 {
-    color: $colorHPIRed;
-  }
+	h5 {
+		color: $colorHPIRed;
+	}
 
-  table {
-    width: 100%;
-    margin-top: 20px;
+	table {
+		width: 100%;
+		margin-top: 20px;
 
-    td {
-      color: grey;
-    }
-  }
+		td {
+			color: grey;
+		}
+	
+		@include media-breakpoint-down(xs) {
+			tr{
+				display:block;
+				position: relative;
+				/* max-width: 425px; */
+				
+				&:not(:last-child){
+					padding-bottom: 15px;
+				}
+				
+				> td{
+					&:nth-of-type(1){
+						display: block;
+						float:right;
+						padding: 0;
+						line-height: 0;
+					}
+					&:nth-of-type(2){
+						padding: 2.5px 0;
+						color: #373a3c;
+					}
+					&:nth-of-type(2),
+					&:nth-of-type(3){
+						display: block;
+						margin-left: .5em;
+						line-height: normal;	
+					}
+					&:nth-of-type(3){
+						font-size:small;
+					}
+				}
+			}
+		}
+	}
 }
