--- a/src/modules/file-explorer/styles/navigation.scss
+++ b/src/modules/file-explorer/styles/navigation.scss
@@ -7,20 +7,35 @@
 	border-radius: 2px;
 	box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 	transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+	.courses {
+		padding-left: 0.8rem;
+	}
+	.classes {
+		padding-left: 0.8rem;
+	}
 	ul {
 		list-style-type: none;
 		padding-left: 0;
+		margin-bottom: 5px;
 		.active {
-			color: $colorHPIOrange;
+			color: $colorHPIRed;
 		}
 		li {
 			padding-bottom: 10px;
+			padding-top: 5px;
 			:hover {
 				cursor: pointer;
 			}
 			span {
 				margin-left: 5px;
 			}
+		}
+	}
+	.title {
+		color: #424242;
+		span {
+			font-size: 20px;
+			padding-left: 5px;
 		}
 	}
 }
