--- a/src/modules/news/styles/news.scss
+++ b/src/modules/news/styles/news.scss
@@ -8,9 +8,19 @@
 
 	h5 {
 		color: $colorHPIRed;
+		float: left;
+	}
+
+	a#showAll{
+		float: right;
 	}
 
 	.articles {
 		margin: 20px -15px;
 	}
+}
+.newsEntry{
+	display: table !important;
+	border: 1px solid rgba(0, 0, 0, 0.125) !important;
+	width: 100%;
 }
