--- a/src/modules/base/styles/layout.scss
+++ b/src/modules/base/styles/layout.scss
@@ -3,6 +3,8 @@
 
 .content-wrapper {
 	width:100%;
+	min-height:calc(100vh - 104px);
+	height:auto;
 	float: left;
 	padding-left:90px;
 	padding-right: 20px;
