--- a/static/styles/lib/error.scss
+++ b/static/styles/lib/error.scss
@@ -40,7 +40,7 @@
 		&.bg-graphic-right {
 			right: 5%;
 			top: 5%;
-			background-image: url(../../../static/images/login-right.png);
+			background-image: url(/images/login-right.png);
 		}
 	}
 
