--- a/views/registration/account.hbs
+++ b/views/registration/account.hbs
@@ -7,7 +7,8 @@
             </div>
             <div class="form-group">
                 <label>Passwort</label>
-                <input type="password" name="password" class="form-control form-control-lg" placeholder="***************" required>
+                <input type="password" name="password" class="form-control form-control-lg" placeholder="***************" pattern="^(?=.*[A-Z])(?=.*[0-9])(?=.*[a-z])(?=.*[\-_!<>§$%&\/()=?\\;:,.#+*~']).{8,255}$"
+                       title="Mindestens 8 Zeichen mit Groß- und Kleinschreibung und mindestens einer Zahl oder Sonderzeichen" required>
             </div>
         </div>
     {{/content}}
