--- a/views/registration/user.hbs
+++ b/views/registration/user.hbs
@@ -10,7 +10,7 @@
         </div>
         <div class="form-group">
             <label>E-Mail-Adresse</label>
-            <input type="email" name="email" class="form-control form-control-lg" placeholder="max.musterschüler@schul-cloud.org" required>
+            <input type="email" name="email" class="form-control form-control-lg lower-case" placeholder="max.musterschüler@schul-cloud.org" required>
         </div>
     {{/content}}
 {{/extend}}
