Transform files, pagination

--- a/static/styles/files/files.scss
+++ b/static/styles/files/files.scss
@@ -71,10 +71,8 @@
         }
     }
 
-    .section-title {
-        .active {
-            font-weight:bold;
-        }
+    .folders-breadcrumb:last-of-type {
+        font-weight:bold;
     }
 
     .directories {
