Transform remaining pages

--- a/views/administration/forms/form-students.pug
+++ b/views/administration/forms/form-students.pug
@@ -1,4 +1,4 @@
-include selects
+include ../../lib/components/selects
 
 input(name='schoolId', type='hidden', data-force-value='true', value=currentSchool)
 input(name='roles[]', type='hidden', data-force-value='true', value='student')
